Obsolete/CPP-API/ZetaLib.hpp

//#############################################################################
// Typedes And Contansts 

typedef char* PCHAR ;
typedef int tCONTROL;
typedef int tCALLBACK;
tCONTROL  ZEUI_CreateGameView (int Left, int Top, int Right, int Bottom);
tCONTROL  ZEUI_CreateControl (PCHAR lpszClassName, int Left, int Top, int Right, int Bottom);
void      ZEUI_InsertControl (tCONTROL ctlDest, tCONTROL ctlToInsert);
PCHAR     ZEUI_GetProp (tCONTROL ControlRef, PCHAR lpszPropName);
void      ZEUI_SetProp (tCONTROL ControlRef, PCHAR lpszPropName, PCHAR lpszPropValue);
void      ZEUI_ShowMsgBox (PCHAR cMessage);
void      ZEUI_ShowMsgBoxEx (PCHAR cMessage, int Left, int Top, int Right, int Bottom);
void      ZEUI_Hide (tCONTROL ControlRef);
void      ZEUI_Show (tCONTROL ControlRef);
void      ZEGE_LoadWorld (PCHAR lpszWordFile);
void      ZEGE_CreatePC (PCHAR lpszMasterName, PCHAR lpszWorkingName, tCALLBACK lpfnCallback);
void      ZEGE_ReplacePC (PCHAR lpszMasterName, PCHAR lpszWorkingName, tCALLBACK lpfnCallback);
void      ZEGE_ClearPC ();
void      ZEGE_DropPC ();
void      ZEGE_DropPCEx (PCHAR lpszAreaName, int X, int Y, int Z);
void      ZEGE_UnDropPC ();
void      ZESS_ClearCallbacks ();
void      ZESS_AddCallback (PCHAR lpszRefName, tCALLBACK lpfnCallback);
void      ZESS_TerminateEngine ();