Obsolete/DLL/Copy of ZetaAPI.pas


///////////////////////------------------------------------------------------
function ZEUI_CreateGameView (Left, Top, Right, Bottom: integer): tCONTROL; stdcall;
begin
  Result := tNULL_CONTROL;
  if (CoreEngine = NIL) then Exit;
  //
  if (GameWindow <> NIL) then FreeAndNIL (GameWindow);
  GameWindow := TZEGameWindow.Create (Rect (Left, Top, Right, Bottom));
  //
  //GlobalViewEditMode := TRUE;
  Result := tCONTROL (GameWindow);
end;

///////////////////////------------------------------------------------------
function ZEUI_CreateControl (lpszClassName: PChar;
  Left, Top, Right, Bottom: integer): tCONTROL; stdcall;
begin
  if (CoreEngine <> NIL) then
    Result := tCONTROL (CreateControl (string (lpszClassName), Rect (Left, Top, Right, Bottom)))
    else Result := tNULL_CONTROL;
end;

///////////////////////------------------------------------------------------
procedure ZEUI_InsertControl (ctlDest, ctlToInsert: tCONTROL); stdcall;
var
  Group: TZEGroupControl;
  Control: TZEControl;
begin
  Group := TZEGroupControl (ctlDest);
  Control := TZEControl (ctlToInsert);
  if ((Group = NIL) OR (Control = NIL)) then Exit;
  //
  try
    Group.Insert (Control);
  except
  end;
end;

///////////////////////------------------------------------------------------
function ZEUI_GetProp (ControlRef: tCONTROL; lpszPropName: PChar): PChar; stdcall;
var
  Scriptable: TZbScriptable;
begin
  Result := NIL;
  Scriptable := TZbScriptable (ControlRef);
  try
    Result := PChar (Scriptable.GetPropertyValue (string (lpszPropName)));
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEUI_SetProp (ControlRef: tCONTROL; lpszPropName, lpszPropValue: PChar); stdcall;
var
  Scriptable: TZbScriptable;
begin
  Scriptable := TZbScriptable (ControlRef);
  try
    Scriptable.SetPropertyValue (lpszPropName, lpszPropValue);
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEUI_ShowMsgBox (lpfnMessage: PChar); stdcall;
var
  cData: String;
begin
  cData := String (lpfnMessage);
  CoreEngine.ShowMsgBox (cData);
end;

///////////////////////------------------------------------------------------
procedure ZEUI_ShowMsgBoxEx (lpfnMessage: PChar; Left, Top, Right, Bottom: integer); stdcall;
var
  cData: String;
begin
  cData := String (lpfnMessage);
  CoreEngine.ShowMsgBox (cData, Rect (Left, Top, Right, Bottom));
end;

///////////////////////------------------------------------------------------
procedure ZEUI_Hide (ControlRef: tCONTROL); stdcall;
begin
  try
    TZEControl (ControlRef).Hide;
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEUI_Show (ControlRef: tCONTROL); stdcall;
begin
  try
    TZEControl (ControlRef).Show;
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEGE_LoadWorld (lpszWorldFile: PChar); stdcall;
begin
  GameWorld.LoadFromFile (string (lpszWorldFile));
end;

///////////////////////------------------------------------------------------
procedure ZEGE_CreatePC (lpszMasterName, lpszWorkingName: PChar; lpfnCallback: tCALLBACK); stdcall;
begin
  GameWorld.CreatePC (
    String (lpszMasterName), String (lpszWorkingName),
    TZEEntityHandler (lpfnCallback));
end;

///////////////////////------------------------------------------------------
procedure ZEGE_ReplacePC (lpszMasterName, lpszWorkingName: PChar; lpfnCallback: tCALLBACK); stdcall;
begin
  GameWorld.ReplacePC (
    String (lpszMasterName), String (lpszWorkingName),
    TZEEntityHandler (lpfnCallback));
end;

///////////////////////------------------------------------------------------
procedure ZEGE_ClearPC; stdcall;
begin
  GameWorld.ClearPC;
end;

///////////////////////------------------------------------------------------
procedure ZEGE_DropPC; stdcall;
begin
  GameWorld.DropPC;
end;

///////////////////////------------------------------------------------------
procedure ZEGE_DropPCEx (lpszAreaName: PChar; X, Y, Z: integer); stdcall;
begin
  GameWorld.DropPC (String (lpszAreaName), X, Y, Z);
end;

///////////////////////------------------------------------------------------
procedure ZEGE_UnDropPC; stdcall;
begin
  GameWorld.UnDropPC;
end;

///////////////////////------------------------------------------------------
procedure ZESS_ClearCallbacks; stdcall;
begin
  if (ScriptMaster <> NIL) then ScriptMaster.Clear;
end;

///////////////////////------------------------------------------------------
procedure ZESS_AddCallback (lpszRefName: PChar; lpfnCallback: tCALLBACK); stdcall;
begin
  if (ScriptMaster <> NIL) then
    ScriptMaster.AddHandler (lpszRefName, TZbScriptCallback (lpfnCallback));
end;

///////////////////////------------------------------------------------------
procedure ZESS_TerminateEngine; stdcall;
begin
  if (CoreEngine <> NIL) then CoreEngine.Terminate;
end;


end.

